# matchsnapper

./: .gitignore  CLAUDE.md  FEATURES.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e89c44027bea_initial.py
backend/app/: config.py  main.py
backend/app/api/v1/: auth.py  interactions.py  matching.py  router.py  snapshots.py  tags.py  users.py
backend/app/auth/: base.py  jwt_provider.py  oauth_provider.py
backend/app/models/: __init__.py  interactions.py  snapshot.py  tag.py  user.py
backend/app/schemas/: __init__.py  auth.py  matching.py  snapshot.py  tag.py  user.py
backend/app/services/: auth_service.py  matching_service.py  snapshot_service.py  storage_service.py
backend/fixtures/: load_fixtures.py  tags.json  users.json
backend/tests/: conftest.py  test_auth.py  test_interactions.py  test_matching.py  test_snapshots.py  test_tags.py  test_users.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: auth.ts  client.ts  matching.ts  snapshots.ts  users.ts
frontend/src/components/: AvatarUpload.tsx  Layout.tsx  MatchCard.tsx
frontend/src/components/SnapshotEditor/: SnapshotItem.tsx  TagSearch.tsx  WeightSelector.tsx
frontend/src/pages/: LoginPage.tsx  MatchesPage.tsx  ProfilePage.tsx  RegisterPage.tsx  SnapshotEditorPage.tsx  UserProfilePage.tsx
frontend/src/store/: authStore.ts
